hphp/hack/test/typecheck/call_in_static_varray.php.exp
File "call_in_static_varray.php", line 7, characters 37-42:
Expected constant expression for initializer (Parsing[1002])
File "call_in_static_varray.php", line 7, characters 37-40:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "call_in_static_varray.php", line 7, characters 30-43:
  From this declaration, the context of this function body provides the capability set {}
  File "call_in_static_varray.php", line 4, characters 26-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
