hphp/hack/test/typecheck/call_in_static_varray.php
<?hh

class C {
  public static function f(): string {
    return "lol";
  }
  static varray<string> $x = varray[C::f()];
}
